[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "create-mcp"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server that analyzes URLs to locate Swagger/OpenAPI documentation and formats endpoints."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Thapan"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "mcp-server",
    "swagger",
    "openapi",
    "api-detector",
    "agentic-ai",
    "antigravity",
    "claude",
    "gemini"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
swagger-mcp = "check_swagger:handle_mcp_session"
